# tanks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arc  archive.h  cmake_install.cmake  core.c  core_archive.c  core_archive.h  core_lua.c  core_lua.h  core_lua_api.c  core_lua_api.h  core_renderer.c  core_renderer.h  game.lua  glad.c  main.c  old.c  renderer.c  renderer.h  sausages  sausages.arc  tanks  tri.frag  tri.vert
.cache/clangd/index/: glad.c.035E6832A71C1B14.idx  glad.h.03DB2445770CB7F7.idx  khrplatform.h.4D1DF240D0894CC6.idx  main.c.D2989987EF52F765.idx  renderer.h.56A4B2C45E14EC73.idx
data/locales/: en.txt  ru.txt
glad/: glad.h
src/core/: archive.c  archive.h  audio.c  audio.h  cmath.c  cmath.h  collision.h  core.c  font.c  font.h  local.c  local.h  lua.c  lua.h  lua_api.c  lua_api.h  net.c  net.h  renderer.c  renderer.h  ui.c  ui.h
src/core/shaders/: quad.vert  text.frag  texture.vert  tri.frag  tri.vert
src/game/: client.lua  game.lua  physics.lua  server.lua
tools/: arc.c
